Fixed grid and breadcrumbs fontend bugs on small screens

--- a/app/components/Breadcrumbs/styles.module.css
+++ b/app/components/Breadcrumbs/styles.module.css
@@ -5,6 +5,9 @@
   list-style: none;
 
   display: flex;
+
+  flex-wrap: wrap;
+
   flex-direction: row;
   gap: 5px;
 }
