--- a/app/components/Dashboard/menuButton.module.css
+++ b/app/components/Dashboard/menuButton.module.css
@@ -41,6 +41,12 @@
   font-size: 24px;
 }
 
+@media (max-width: 991px) {
+  .title {
+    font-size: 12px !important;
+  }
+}
+
 .bottom {
   display: flex;
   flex-direction: column;
